improve endpoints for posts/comments